--- a/index.html
+++ b/index.html
@@ -31,29 +31,45 @@ https://templatemo.com/tm-557-grad-school
 
 <body>
 
-   
-  <!--header-->
-  <header class="main-header clearfix" role="header">
-    <div class="logo">
-      <a href="#"><em>INTELLIGENTSIA</em> ACADEMY</a>
-    </div>
-    <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
-    <nav id="menu" class="main-nav" role="navigation">
-      <ul class="main-menu">
-        <li><a href="#section1">Home</a></li>
-        <li class="has-submenu"><a href="#section2">About Us</a>
-          <!-- <ul class="sub-menu">
-            <li><a href="#section2">Who we are?</a></li>
-            <li><a href="#section3">What we do?</a></li>
-            <li><a href="#section3">How it works?</a></li>
-          </ul> -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: sticky; top: 0; z-index: 999; padding: 20px !important">
+    <a class="navbar-brand" href="#"><h4 style="font-weight: bold;"><span style="color: #e33c12;">INTELLIGENTSIA</span> <span style="color: white;">ACADEMY</span></h4></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
         </li>
-        <li><a href="#section4">Courses</a></li>
-        <!-- <li><a href="#section5">Video</a></li> -->
-        <li><a href="#section6">Contact</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section2">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section4">Courses</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section6">Contact</a>
+        </li>
+        <!-- <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li> -->
       </ul>
-    </nav>
-  </header>
+        <div class="shake">
+          <button class="btn my-sm-0" type="submit" style="background-color: #e33c12; font-weight: bold; color: #172238;">
+            Enquiry <i class="fa fa-phone" style="color: 172238;"></i>
+          </button>
+        </div>
+    </div>
+  </nav>
 
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
@@ -65,7 +81,7 @@ https://templatemo.com/tm-557-grad-school
           <div class="caption">
               <h4> YOUR <em> AMBITION </em> IS OUR <em> MISSION </em></h4>
 
-              <img class="fadeinoutlogo" src = "assets/images/c_logo.jpeg" height="280px" style="border: 10px #4c269d; border-radius: 50%;"><br><br>
+              <img class="fadeinoutlogo" src = "assets/images/c_logo.jpeg" style="border-radius: 50%; width: 500px; max-width: 100%;"><br><br>
 
               <div class="main-button" style="padding-top: 10px;">
                   <div class="scroll-to-section"><a href="#section2">Discover more</a></div>
@@ -87,6 +103,7 @@ https://templatemo.com/tm-557-grad-school
               </div>
               <div class="content-hide">
                 <p><b>We provide coaching for school section ( IX th & X th ) as well as for college section ( XI th & XII th ) along with the competitive exams which include exams like MH-CET, IIT JEE, NEET, etc.</b></p>
+                <p class="hidden-sm"><b>We provide coaching for school section ( IX th & X th ) as well as for college section ( XI th & XII th ) along with the competitive exams which include exams like MH-CET, IIT JEE, NEET, etc.</b></p>
                 <div class="scroll-to-section"><a href="#section4">More Info.</a></div>
             </div>
             </div>
@@ -99,7 +116,8 @@ https://templatemo.com/tm-557-grad-school
                 <h4><i class="fa fa-graduation-cap"></i>Virtual Lectures</h4>
               </div>
               <div class="content-hide">
-                <p><b>We provide online lectures too something more to be written here regarding online lectures</b></p>
+                <p><b>We provide online lectures too something more to be written here regarding online lectures.</b></p>
+                <p class="hidden-sm"><b>We provide online lectures too something more to be written here regarding online lectures.</b></p>
                 <div class="scroll-to-section"><a href="#section5">Details</a></div>
             </div>
             </div>
@@ -112,7 +130,8 @@ https://templatemo.com/tm-557-grad-school
                 <h4><i class="fa fa-book"></i>Real Meeting</h4>
               </div>
               <div class="content-hide">
-                <p><b>Visit our classes get one to one connection with teachers also can have some demo lectures and clear all your doubts for admission</b></p>
+                <p><b>Visit our classes get one to one connection with teachers also can have some demo lectures and clear all your doubts for admission.</b></p>
+                <p class="hidden-sm"><b>Visit our classes get one to one connection with teachers also can have some demo lectures and clear all your doubts for admission.</b></p>
                 <div class="scroll-to-section"><a href="#section6">Read More</a></div>
             </div>
             </div>
@@ -141,7 +160,7 @@ https://templatemo.com/tm-557-grad-school
               <article id='tabs-1'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/achievement2.jpeg" style="height: 500px; width: 450px;" alt="">
+                    <img src="assets/images/achievement2.jpeg" style="max-width: 100%; width: 500px" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>Best Education</h4>
@@ -159,25 +178,25 @@ https://templatemo.com/tm-557-grad-school
               <article id='tabs-2'>
                 <div class="row">
                   <div class="owl-carousel owl-theme">
-                    <div class="item">
+                    <div class="item" style="padding: 10%;">
                       <div class="down-content">
                         <h4>Chandan Gupta</h4>
                         <p>QUALIFICATIONS: <br>
                           BE INSTRUMENTATION <br>
                           MSC PHYSICS</p>                        
                           <div class="author-image">
-                          <img src="assets/images/chandan.jpeg" alt="">
+                          <img src="assets/images/chandan.jpeg" style="width: 500px; max-width: 100%;" alt="">
                         </div>
                         <div class="text-button-pay">
                           <a href="https://www.linkedin.com/in/chandan-gupta-ab982b10a" target="_blank" rel="noopener noreferrer">Know More <i class="fa fa-angle-double-right"></i></a>
                         </div>
                       </div>
                     </div>
-                    <div class="item">
+                    <div class="item" style="padding: 10%;">
                       <div class="down-content">
                         <h4>Muzammil Shaikh</h4>
                         <p>QUALIFICATIONS: <br>
-                          BE mechanical <br>
+                          BE MECHANICAL <br>
                           MSC PHYSICS</p>
                         <div class="author-image">
                           <img src="assets/images/muzambil.jpeg" alt="">
@@ -187,11 +206,11 @@ https://templatemo.com/tm-557-grad-school
                         </div>
                       </div>
                     </div>
-                    <div class="item">
+                    <div class="item" style="padding: 10%;">
                       <div class="down-content">
                         <h4>Shubham Sharma</h4>
                         <p>QUALIFICATIONS: <br>
-                          BE mechanical <br>
+                          BE MECHANICAL <br>
                           MSC PHYSICS</p>                        
                           <div class="author-image">
                           <img src="assets/images/shubham.jpeg" alt="">
@@ -207,7 +226,7 @@ https://templatemo.com/tm-557-grad-school
               <article id='tabs-3'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/achievement1.jpeg" alt="">
+                    <img src="assets/images/achievement1.jpeg" style="max-width: 100%; width: 500px" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>Quality Teaching</h4>
@@ -440,7 +459,7 @@ https://templatemo.com/tm-557-grad-school
         </div>
       </div>
       <div class="row" style="color: white; font-weight: bold; text-align: center;">
-        <h4> CONTACT </h4> &nbsp; <h4 style="color: #e33c12;"> DETAILS :</h4>
+        <h4> &nbsp; CONTACT </h4> &nbsp; <h4 style="color: #e33c12;"> DETAILS :</h4>
         <h5> 
           &nbsp; &nbsp; <i class="fa fa-phone" style="color: #e33c12;"></i> 8446361907
           &nbsp; &nbsp; <i class="fa fa-phone" style="color: #e33c12;"></i> 8237393547
@@ -471,6 +490,10 @@ https://templatemo.com/tm-557-grad-school
     <script src="assets/js/video.js"></script>
     <script src="assets/js/slick-slider.js"></script>
     <script src="assets/js/custom.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script>
         //according to loftblog tut
         $('.nav li:first').addClass('active');
