--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
     <link rel="stylesheet" href="assets/css/templatemo-grad-school.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
-<!--
-    
-TemplateMo 557 Grad School
 
-https://templatemo.com/tm-557-grad-school
-
--->
   </head>
 
 <body>
@@ -72,7 +66,7 @@ https://templatemo.com/tm-557-grad-school
   </nav>
 
   <!-- ***** Main Banner Area Start ***** -->
-  <section class="section main-banner" id="top" data-section="section1">
+  <section class="section main-banner" id="top" id="section1">
       <video autoplay muted loop id="bg-video">
           <source src="assets/images/vid2.mp4" type="video/mp4" />
       </video>
@@ -84,7 +78,7 @@ https://templatemo.com/tm-557-grad-school
               <img class="fadeinoutlogo" src = "assets/images/c_logo.jpeg" style="border-radius: 50%; width: 500px; max-width: 100%;"><br><br>
 
               <div class="main-button" style="padding-top: 10px;">
-                  <div class="scroll-to-section"><a href="#section2">Discover more</a></div>
+                  <div><a href="#section2">Discover more</a></div>
               </div>
           </div>
       </div>
@@ -141,7 +135,7 @@ https://templatemo.com/tm-557-grad-school
     </div>
   </section>
 
-  <section class="section why-us" data-section="section2">
+  <section class="section why-us" id="section2">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -241,7 +235,7 @@ https://templatemo.com/tm-557-grad-school
     </div>
   </section>
 
-  <section class="section video" data-section="section5">
+  <section class="section video" id="section5">
     <div class="container">
       <div class="row">
         <div class="col-md-6 align-self-center">
@@ -266,7 +260,7 @@ https://templatemo.com/tm-557-grad-school
     </div>
   </section>
 
-  <section class="section coming-soon" data-section="section3">
+  <section class="section coming-soon" id="section3">
     <div class="container">
       <div class="row">
         <div class="col-md-7 col-xs-12">
@@ -334,7 +328,7 @@ https://templatemo.com/tm-557-grad-school
     </div>
   </section>
 
-  <section class="section courses" data-section="section4">
+  <section class="section courses" id="section4">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
@@ -418,7 +412,7 @@ https://templatemo.com/tm-557-grad-school
     </div>
   </section>
 
-  <section class="section contact" data-section="section6">
+  <section class="section contact" id="section6">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -494,14 +488,14 @@ https://templatemo.com/tm-557-grad-school
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
+    <!-- <script>
         //according to loftblog tut
         $('.nav li:first').addClass('active');
 
         var showSection = function showSection(section, isAnimate) {
           var
           direction = section.replace(/#/, ''),
-          reqSection = $('.section').filter('[data-section="' + direction + '"]'),
+          reqSection = $('.section').filter('[id="' + direction + '"]'),
           reqSectionPos = reqSection.offset().top - 0;
 
           if (isAnimate) {
@@ -543,6 +537,6 @@ https://templatemo.com/tm-557-grad-school
         $(window).scroll(function () {
           checkSection();
         });
-    </script>
+    </script> -->
 </body>
 </html>
