--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
         </li> -->
       </ul>
         <div class="shake">
-          <button class="btn my-sm-0" type="submit" style="background-color: #e33c12; font-weight: bold; color: #172238;">
-            Enquiry <i class="fa fa-phone" style="color: 172238;"></i>
-          </button>
+          <a href = "#section6"><button class="btn my-sm-0" type="submit" style="background-color: #e33c12; font-weight: bold; color: #172238;">
+              Enquiry <i class="fa fa-phone" style="color: 172238;"></i>
+            </button>
+          </a>
         </div>
     </div>
   </nav>
