--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div class="content-hide">
                 <p><b>We provide coaching for school section ( IX th & X th ) as well as for college section ( XI th & XII th ) along with the competitive exams which include exams like MH-CET, IIT JEE, NEET, etc.</b></p>
                 <p class="hidden-sm"><b>We provide coaching for school section ( IX th & X th ) as well as for college section ( XI th & XII th ) along with the competitive exams which include exams like MH-CET, IIT JEE, NEET, etc.</b></p>
-                <div class="scroll-to-section"><a href="#section4">More Info.</a></div>
+                <div><a href="#section4">More Info.</a></div>
             </div>
             </div>
           </div>
@@ -113,7 +113,7 @@
               <div class="content-hide">
                 <p><b>We provide online lectures too something more to be written here regarding online lectures.</b></p>
                 <p class="hidden-sm"><b>We provide online lectures too something more to be written here regarding online lectures.</b></p>
-                <div class="scroll-to-section"><a href="#section5">Details</a></div>
+                <div><a href="#section5">Details</a></div>
             </div>
             </div>
           </div>
@@ -127,7 +127,7 @@
               <div class="content-hide">
                 <p><b>Visit our classes get one to one connection with teachers also can have some demo lectures and clear all your doubts for admission.</b></p>
                 <p class="hidden-sm"><b>Visit our classes get one to one connection with teachers also can have some demo lectures and clear all your doubts for admission.</b></p>
-                <div class="scroll-to-section"><a href="#section6">Read More</a></div>
+                <div><a href="#section6">Read More</a></div>
             </div>
             </div>
           </div>
@@ -489,7 +489,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
+    <!-- <script>
         //according to loftblog tut
         $('.nav li:first').addClass('active');
 
@@ -538,6 +538,6 @@
         $(window).scroll(function () {
           checkSection();
         });
-    </script>
+    </script> -->
 </body>
 </html>
