--- a/index.html
+++ b/index.html
@@ -415,29 +415,38 @@
       <div class="row">
         <div class="col-md-12">
           <div class="section-heading">
-            <h2>Contact Us</h2>
+            <h2>LET'S CONNECT</h2>
           </div>
         </div>
-        <div class="col-sm-4" style="padding-bottom: 12px;">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdLXs_CjAOz1vNBnDCwiug7tLA9sZs2aswGbPTncJCB0Y7SLQ/viewform?embedded=true" width="380" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>        
+        <div class="col-sm-7" style="padding-bottom: 12px; padding-right: 12px;">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdLXs_CjAOz1vNBnDCwiug7tLA9sZs2aswGbPTncJCB0Y7SLQ/viewform?embedded=true" min-width="380" width="450" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>        
         </div>
-        <div class="col-sm-4">
-          <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3767.5739458985427!2d73.1969149!3d19.2138025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7930d9cf30295%3A0xb62f00ae6f1004ba!2sIntelligentsia%20Academy!5e0!3m2!1sen!2sin!4v1708329415737!5m2!1sen!2sin" width="350" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>          
-          </div>
-        </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
           <div id="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3767.5739458985427!2d73.1969149!3d19.2138025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7930d9cf30295%3A0xb62f00ae6f1004ba!2sIntelligentsia%20Academy!5e0!3m2!1sen!2sin!4v1708329415737!5m2!1sen!2sin" width="350" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>          
           </div>
         </div>
       </div>
-      <div class="row" style="color: white; font-weight: bold; text-align: center;">
-        <h4> &nbsp; CONTACT </h4> &nbsp; <h4 style="color: #e33c12;"> DETAILS :</h4>
-        <h5> 
-          &nbsp; &nbsp; <i class="fa fa-phone" style="color: #e33c12;"></i> 8446361907
-          &nbsp; &nbsp; <i class="fa fa-phone" style="color: #e33c12;"></i> 8237393547
-        </h5>
+      <div class="row" style="padding-top: 8%;">
+        <div class="row contactsec">
+          <h6 style="font-weight: bold"> &nbsp; CONTACT </h6> &nbsp; <h6 style="color: #e33c12; font-weight: bold;"> NO:</h6>
+          <h6 style="font-weight: bold"> 
+            &nbsp; &nbsp; <i class="fa fa-phone" style="color: #e33c12;"></i> 8446361907
+            &nbsp; &nbsp; <i class="fa fa-phone" style="color: #e33c12;"></i> 8237393547
+          </h6>
+        </div>
+      </div>
+      <div class="row contactsec">
+        <h6 style="color: #e33c12; font-weight: bold;"> ADDRESS:</h6> &nbsp;
+        <h6 style="font-weight: bold;">          
+          woollen chawl, Ground floor, Pranav Apartment, opposite to ashirwad hospital, Ambernath, Maharashtra 421502
+        </h6>
+      </div>
+      <div class="row" style="color: white; font-weight: bold; display: flex; flex-direction: row; justify-content: space-evenly; font-size: x-large;">
+        <a class="smedia" href="https://www.instagram.com/intelligentsia_academy07/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a class="smedia" href="https://www.facebook.com/intelligentsia.academyy/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a class="smedia" href="https://twitter.com/Intelli71068358"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a class="smedia" href="https://wa.me/message/INUXN6C2IB2EK1"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
       </div>
     </div>
   </section>
