--- a/index.html
+++ b/index.html
@@ -65,21 +65,23 @@
 
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" id="section1">
-      <video autoplay muted loop id="bg-video">
-          <source src="assets/images/vid2.mp4" type="video/mp4" />
+    <div style="background-color: rgba(22, 34, 57, 0.85) !important;">
+      <video style="z-index: 999;" autoplay muted loop id="bg-video">
+        <source src="assets/images/vid2.mp4" type="video/mp4" />
       </video>
 
       <div class="video-overlay header-text">
           <div class="caption">
+            <div class="fadeinoutlogo2" style="background-color: rgba(22, 34, 57, 0.85); padding: 1.5px; border-radius: 25px;">
               <h4> YOUR <em> AMBITION </em> IS OUR <em> MISSION </em></h4>
-
-              <img class="fadeinoutlogo" src = "assets/images/c_logo.jpeg" style="border-radius: 50%; width: 500px; max-width: 100%;"><br><br>
-
-              <div class="main-button" style="padding-top: 10px;">
-                  <div><a href="#section2">Discover more</a></div>
-              </div>
+            </div>
+            <img class="fadeinoutlogo" src = "assets/images/c_logo.jpeg" style="border-radius: 50%; width: 500px; max-width: 100%;"><br><br>
+            <div class="main-button" style="padding-top: 10px;">
+              <div><a href="#section2">Discover more</a></div>
+            </div>
           </div>
       </div>
+    </div>
   </section>
   <!-- ***** Main Banner Area End ***** -->
 
