--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
         <div class="row contactsec">
           <h6 style="font-weight: bold"> &nbsp; CONTACT </h6> &nbsp; <h6 style="color: #e33c12; font-weight: bold;"> NO:</h6>
           <h6 style="font-weight: bold"> 
-            &nbsp; &nbsp; <i class="fa fa-phone" style="color: #e33c12;"></i> 8446361907
-            &nbsp; &nbsp; <i class="fa fa-phone" style="color: #e33c12;"></i> 8237393547
+            &nbsp; <i class="fa fa-phone" style="color: #e33c12;"></i> 8446361907
+            &nbsp; <i class="fa fa-phone" style="color: #e33c12;"></i> 8237393547
           </h6>
         </div>
       </div>
