--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#section6">Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section7">Achievements</a>
+        </li>
         <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown
@@ -135,7 +138,7 @@
     </div>
   </section>
 
-  <section class="section why-us" id="section2">
+  <section class="section why-us courses" id="section2">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -143,93 +146,175 @@
             <h2>Why choose Intelligentsia Academy?</h2>
           </div>
         </div>
-        <div class="col-md-12">
-          <div id='tabs'>
-            <ul>
-              <li><a href='#tabs-1'>Best Education</a></li>
-              <li><a href='#tabs-2'>Best Teachers</a></li>
-              <li><a href='#tabs-3'>Quality Teaching</a></li>
-            </ul>
-            <section class='tabs-content'>
-              <article id='tabs-1'>
-                <div class="row">
-                  <div class="col-md-6">
-                    <img src="assets/images/achievement2.jpeg" style="max-width: 100%; width: 500px" alt="">
-                  </div>
-                  <div class="col-md-6">
-                    <h4>Best Education</h4>
-                    <b><p>Some of the salient features of our academy are: <br>
-                      - A team of professionals with good experience <br> 
-                      - Improvisation of basic concepts <br>
-                      - Regular parents and teachers interaction <br>
-                      - Special attention towards weak students <br>
-                      - Limited students per batch <br>
-                      - E-learning
-                    </p></b>
-                  </div>
-                </div>
-              </article>
-              <article id='tabs-2'>
-                <div class="row">
-                  <div class="owl-carousel owl-theme">
-                    <div class="item" style="padding: 10%;">
-                      <div class="down-content">
-                        <h4>Chandan Gupta</h4>
-                        <p>QUALIFICATIONS: <br>
-                          BE INSTRUMENTATION <br>
-                          MSC PHYSICS</p>                        
-                          <div class="author-image">
-                          <img src="assets/images/chandan.jpeg" style="width: 500px; max-width: 100%;" alt="">
-                        </div>
-                        <div class="text-button-pay">
-                          <a href="https://www.linkedin.com/in/chandan-gupta-ab982b10a" target="_blank" rel="noopener noreferrer">Know More <i class="fa fa-angle-double-right"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="item" style="padding: 10%;">
-                      <div class="down-content">
-                        <h4>Muzammil Shaikh</h4>
-                        <p>QUALIFICATIONS: <br>
-                          BE MECHANICAL <br>
-                          MSC PHYSICS</p>
-                        <div class="author-image">
-                          <img src="assets/images/muzambil.jpeg" alt="">
-                        </div>
-                        <div class="text-button-pay">
-                          <a href="https://www.linkedin.com/in/chandan-gupta-ab982b10a" target="_blank" rel="noopener noreferrer">Know More <i class="fa fa-angle-double-right"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="item" style="padding: 10%;">
-                      <div class="down-content">
-                        <h4>Shubham Sharma</h4>
-                        <p>QUALIFICATIONS: <br>
-                          BE MECHANICAL <br>
-                          MSC PHYSICS</p>                        
-                          <div class="author-image">
-                          <img src="assets/images/shubham.jpeg" alt="">
-                        </div>
-                        <div class="text-button-free">
-                        <a href="https://www.linkedin.com/in/chandan-gupta-ab982b10a" target="_blank" rel="noopener noreferrer"> Know More <i class="fa fa-angle-double-right"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </article>
-              <article id='tabs-3'>
-                <div class="row">
-                  <div class="col-md-6">
-                    <img src="assets/images/achievement1.jpeg" style="max-width: 100%; width: 500px" alt="">
-                  </div>
-                  <div class="col-md-6">
-                    <h4>Quality Teaching</h4>
-                    <p>have to update here with some texts whats so best about teaching methods in Intelligentsia academy</p>
-                  </div>
-                </div>
-              </article>
-            </section>
+        <div class="col-md-12" style="display: flex; justify-content: center; flex-direction: row; color: white; padding-bottom: 30px;">
+          <h2> BEST TEACHERS</h2>
+        </div>
+        <div class="owl-carousel owl-theme">
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/chandan.jpeg">
+            <div class="down-content">
+              <h4>Mr. CHANDAN GUPTA</h4>
+              <p class="pbold"> &#x25CF; BE IN INSTRUMENTATION <br> &#x25CF; MSC IN PHYSICS</p>
+              <p class="pbold">8 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
           </div>
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/muzambil.jpg">
+            <div class="down-content">
+              <h4>Mr. MUZAMMIL SHAIKH</h4>
+              <p class="pbold"> &#x25CF; BE IN MECHANICAL <br> &#x25CF; MSC IN PHYSICS</p>
+              <p class="pbold">8 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/nadeem.jpg">
+            <div class="down-content">
+              <h4>Mr. NADEEM KAZI</h4>
+              <p class="pbold"> &#x25CF; MA IN ENGLISH <br> &#x25CF; B.Ed</p>
+              <p class="pbold">16 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/shubham.jpg">
+            <div class="down-content">
+              <h4>Mr. SHUBHAM SHARMA</h4>
+              <p class="pbold"> &#x25CF; BE IN MECHANICAL <br> &#x25CF; MSC IN PHYSICS</p>
+              <p class="pbold">10 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/sunita.jpg">
+            <div class="down-content">
+              <h4>Mis. SUNITA BIND</h4>
+              <p class="pbold"> &#x25CF; MA IN HINDI <br> &#x25CF; B.Ed</p>
+              <p class="pbold">18 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/chandan.jpeg">
+            <div class="down-content">
+              <h4>Mis. ASHA GULVE</h4>
+              <p class="pbold"> &#x25CF; MA IN MARATHI <br> &#x25CF; B.Ed</p>
+              <p class="pbold">30 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div> -->
+          <!-- <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/chandan.jpeg">
+            <div class="down-content">
+              <h4>Mis. PRIYA MUTHUPANDI</h4>
+              <p class="pbold"> &#x25CF; B.L.S <br> &#x25CF; L.L.B</p>
+              <p class="pbold">3 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div> -->
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/tabssum.jpeg">
+            <div class="down-content">
+              <h4>Mis. TAMASSUM PAMDI</h4>
+              <p class="pbold"> &#x25CF; B.A</p>
+              <p class="pbold">1 Yr of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/celly.jpeg">
+            <div class="down-content">
+              <h4>Mis. CELLY TANGUNDI</h4>
+              <p class="pbold"> &#x25CF; B.COM </p>
+              <p class="pbold">1 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/nikita.jpeg">
+            <div class="down-content">
+              <h4>Mis. NIKITA YADAV</h4>
+              <p class="pbold"> &#x25CF; B.PHARM </p>
+              <p class="pbold">2 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/piyusha.jpg">
+            <div class="down-content">
+              <h4>Mis. PIYUSHA DAS</h4>
+              <p class="pbold"> &#x25CF; M.Sc. MICROBIOLOGY </p>
+              <p class="pbold">2 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/roshni.jpeg">
+            <div class="down-content">
+              <h4>Mis. ROSHNI GUPTA</h4>
+              <p class="pbold"> &#x25CF; M.Sc. NURSING </p>
+              <p class="pbold">5 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/pratik.jpeg">
+            <div class="down-content">
+              <h4>Mr. PRATIK UDMAL</h4>
+              <p class="pbold"> &#x25CF; M.Sc. CHEMISTRY </p>
+              <p class="pbold">8 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/chandan.jpeg">
+            <div class="down-content">
+              <h4>Mr. MEHTAB</h4>
+              <p class="pbold"> &#x25CF; ........ </p>
+              <p class="pbold">20 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="item" style="background-color: white; border-radius: 15px;">
+            <img class="timg" src="assets/images/teachers/chandan.jpeg">
+            <div class="down-content">
+              <h4>Mr. JITEN</h4>
+              <p class="pbold"> &#x25CF; ........ </p>
+              <p class="pbold">20 Yrs of experience</p>
+              <div class="text-button-pay">
+                <a href="#">Know More <i class="fa fa-angle-double-right"></i></a>
+              </div>
+            </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -412,6 +497,140 @@
     </div>
   </section>
 
+  <section class="section courses" id="section7">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section-heading">
+            <h2>ACHIEVEMENTS</h2>
+          </div>
+          <div class="book">
+            <div class="page">
+              <div class="front cover" style="border: 4px solid rgb(184, 14, 14);">
+                <h1></h1>
+                <p style="color: black; font-weight: bold; backdrop-filter: blur(10px); width: fit-content; border-radius: 25%; padding: 10px;">OUR<br>ACHIEVEMENTS</p>
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/t1.jpeg">
+              </div>
+            </div>
+          
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/t2.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/t3.jpeg">
+              </div>
+            </div>
+
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/t4.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/t5.jpeg">
+              </div>
+            </div>
+
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/t6.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/s1.jpeg">
+              </div>
+            </div>
+
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/s2.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/s3.jpeg">
+              </div>
+            </div>
+
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/s4.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/s5.jpeg">
+              </div>
+            </div>
+
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/s6.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/s7.jpeg">
+              </div>
+            </div>
+
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/s8.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/s9.jpeg">
+              </div>
+            </div>
+
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/s10.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/s11.jpeg">
+              </div>
+            </div>
+
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/s12.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/s13.jpeg">
+              </div>
+            </div>
+
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/s14.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/s15.jpeg">
+              </div>
+            </div>
+
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/s16.jpeg">
+              </div>
+              <div class="back">
+                <img src="./assets/images/achievements/s17.jpeg">
+              </div>
+            </div>
+          
+            <div class="page">
+              <div class="front">
+                <img src="./assets/images/achievements/s18.jpeg" alt="Img 2">
+              </div>
+              <div class="back cover">
+                <h3>That's all, folks</h3>
+                <p>FlipBook code and content:<br><a href="https://stackoverflow.com/users/383904/roko-c-buljan" target="_blank" rel="nofollow">Roko C. Buljan</a>
+                <br>Original idea:<br><a href="https://stackoverflow.com/a/76978444/383904" target="_blank" rel="nofollow">Stack Overflow answer</a>
+                <br>Images by: picsum.photos</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="section contact" id="section6">
     <div class="container">
       <div class="row">
@@ -475,6 +694,7 @@
     <script src="assets/js/video.js"></script>
     <script src="assets/js/slick-slider.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/book.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
