--- a/index.html
+++ b/index.html
@@ -614,15 +614,15 @@
               </div>
             </div>
           
-            <div class="page">
+            <div class="page" style="border: 4px solid rgb(184, 14, 14);">
               <div class="front">
                 <img src="./assets/images/achievements/s18.jpeg" alt="Img 2">
               </div>
               <div class="back cover">
-                <h3>That's all, folks</h3>
+                <!-- <h3>That's all, folks</h3>
                 <p>FlipBook code and content:<br><a href="https://stackoverflow.com/users/383904/roko-c-buljan" target="_blank" rel="nofollow">Roko C. Buljan</a>
                 <br>Original idea:<br><a href="https://stackoverflow.com/a/76978444/383904" target="_blank" rel="nofollow">Stack Overflow answer</a>
-                <br>Images by: picsum.photos</p>
+                <br>Images by: picsum.photos</p> -->
               </div>
             </div>
           </div>
