--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="item" style="background-color: white; border-radius: 15px;">
             <img class="timg" src="assets/images/teachers/sunita.jpg">
             <div class="down-content">
-              <h4>Mis. SUNITA BIND</h4>
+              <h4>Ms. SUNITA BIND</h4>
               <p class="pbold"> &#x25CF; MA IN HINDI <br> &#x25CF; B.Ed</p>
               <p class="pbold">18 Yrs of experience</p>
               <div class="text-button-pay">
@@ -208,7 +208,7 @@
           <!-- <div class="item" style="background-color: white; border-radius: 15px;">
             <img class="timg" src="assets/images/teachers/chandan.jpeg">
             <div class="down-content">
-              <h4>Mis. ASHA GULVE</h4>
+              <h4>Ms. ASHA GULVE</h4>
               <p class="pbold"> &#x25CF; MA IN MARATHI <br> &#x25CF; B.Ed</p>
               <p class="pbold">30 Yrs of experience</p>
               <div class="text-button-pay">
@@ -219,7 +219,7 @@
           <!-- <div class="item" style="background-color: white; border-radius: 15px;">
             <img class="timg" src="assets/images/teachers/chandan.jpeg">
             <div class="down-content">
-              <h4>Mis. PRIYA MUTHUPANDI</h4>
+              <h4>Ms. PRIYA MUTHUPANDI</h4>
               <p class="pbold"> &#x25CF; B.L.S <br> &#x25CF; L.L.B</p>
               <p class="pbold">3 Yrs of experience</p>
               <div class="text-button-pay">
@@ -230,7 +230,7 @@
           <div class="item" style="background-color: white; border-radius: 15px;">
             <img class="timg" src="assets/images/teachers/tabssum.jpeg">
             <div class="down-content">
-              <h4>Mis. TAMASSUM PAMDI</h4>
+              <h4>Ms. TAMASSUM PAMDI</h4>
               <p class="pbold"> &#x25CF; B.A</p>
               <p class="pbold">1 Yr of experience</p>
               <div class="text-button-pay">
@@ -241,7 +241,7 @@
           <div class="item" style="background-color: white; border-radius: 15px;">
             <img class="timg" src="assets/images/teachers/celly.jpeg">
             <div class="down-content">
-              <h4>Mis. CELLY TANGUNDI</h4>
+              <h4>Ms. CELLY TANGUNDI</h4>
               <p class="pbold"> &#x25CF; B.COM </p>
               <p class="pbold">1 Yrs of experience</p>
               <div class="text-button-pay">
@@ -252,7 +252,7 @@
           <div class="item" style="background-color: white; border-radius: 15px;">
             <img class="timg" src="assets/images/teachers/nikita.jpeg">
             <div class="down-content">
-              <h4>Mis. NIKITA YADAV</h4>
+              <h4>Ms. NIKITA YADAV</h4>
               <p class="pbold"> &#x25CF; B.PHARM </p>
               <p class="pbold">2 Yrs of experience</p>
               <div class="text-button-pay">
@@ -263,7 +263,7 @@
           <div class="item" style="background-color: white; border-radius: 15px;">
             <img class="timg" src="assets/images/teachers/piyusha.jpg">
             <div class="down-content">
-              <h4>Mis. PIYUSHA DAS</h4>
+              <h4>Ms. PIYUSHA DAS</h4>
               <p class="pbold"> &#x25CF; M.Sc. MICROBIOLOGY </p>
               <p class="pbold">2 Yrs of experience</p>
               <div class="text-button-pay">
@@ -274,7 +274,7 @@
           <div class="item" style="background-color: white; border-radius: 15px;">
             <img class="timg" src="assets/images/teachers/roshni.jpeg">
             <div class="down-content">
-              <h4>Mis. ROSHNI GUPTA</h4>
+              <h4>Ms. ROSHNI GUPTA</h4>
               <p class="pbold"> &#x25CF; M.Sc. NURSING </p>
               <p class="pbold">5 Yrs of experience</p>
               <div class="text-button-pay">
