--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.0.1/turn.min.css">
+
   </head>
 
 <body>
@@ -40,7 +42,7 @@
           <a class="nav-link" href="#section4">Courses</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section7">Achievements</a>
+          <a class="nav-link" href="help.html" target="_blank" rel="noopener noreferrer">Achievements</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#section6">Contact</a>
@@ -498,6 +500,21 @@
     </div>
   </section>
 
+  <!-- <section class="section courses" id="section7">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section-heading">
+            <h2>ACHIEVEMENTS</h2>
+          </div>
+          <div>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> -->
+
   <section class="section contact" id="section6">
     <div class="container">
       <div class="row">
@@ -561,7 +578,10 @@
     <script src="assets/js/video.js"></script>
     <script src="assets/js/slick-slider.js"></script>
     <script src="assets/js/custom.js"></script>
+
     <script src="assets/js/book.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.0.1/turn.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
