--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="#section4">Courses</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="help.html" target="_blank" rel="noopener noreferrer">Achievements</a>
+          <a class="nav-link" href="achievements.html" target="_blank" rel="noopener noreferrer">Achievements</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#section6">Contact</a>
