--- a/achievements.html
+++ b/achievements.html
@@ -21,7 +21,7 @@
 		display: flex;
 		margin: auto;
 		width: 50cqmin;
-		height: 70cqmin;
+		height: 84cqmin;
 		/*1* let pointer event go trough pages of lower Z than .book */
 		pointer-events: none;
 		transform-style: preserve-3d;
@@ -131,7 +131,7 @@
 
 		.cover {
 		background: radial-gradient(circle farthest-corner at 80% 20%, hsl(150 80% 20% / .3) 0%, hsl(170 60% 10% / .1) 100%),
-		hsl(231, 32%, 29%) url(assets/images/godess.jpg) 50% / contain;
+		hsl(231, 32%, 29%) url(assets/images/godess.jpg) 50% / cover;
 		color: hsl(200 30% 98%);
 		}
 	</style>
@@ -140,7 +140,7 @@
 	<div class="background">
 	</div>
 
-	<div style="padding-top: 6%;">
+	<div style="padding-top: 4%;">
 		<div class="book">
 			<div class="page">
 			  <div class="front cover" style="border: 4px solid rgb(184, 14, 14);">
@@ -152,33 +152,6 @@
 			  </div>
 			</div>
 		  
-			<div class="page">
-			  <div class="front">
-				<img src="./assets/images/achievements/t1.jpeg">
-			  </div>
-			  <div class="back">
-				<img src="./assets/images/achievements/t2.jpeg">
-			  </div>
-			</div>
-	
-			<div class="page">
-			  <div class="front">
-				<img src="./assets/images/achievements/t3.jpeg">
-			  </div>
-			  <div class="back">
-				<img src="./assets/images/achievements/t4.jpeg">
-			  </div>
-			</div>
-	
-			<div class="page">
-			  <div class="front">
-				<img src="./assets/images/achievements/t5.jpeg">
-			  </div>
-			  <div class="back">
-				<img src="./assets/images/achievements/t6.jpeg">
-			  </div>
-			</div>
-	
 			<div class="page">
 			  <div class="front">
 				<img src="./assets/images/achievements/s1.jpeg">
@@ -235,28 +208,55 @@
 	
 			<div class="page">
 			  <div class="front">
-				<img src="./assets/images/achievements/s13.jpeg">
+				<img src="./assets/images/achievements/r1.jpeg">
 			  </div>
 			  <div class="back">
-				<img src="./assets/images/achievements/s14.jpeg">
+				<img src="./assets/images/achievements/r2.jpeg">
 			  </div>
 			</div>
 	
 			<div class="page">
 			  <div class="front">
-				<img src="./assets/images/achievements/s15.jpeg">
+				<img src="./assets/images/achievements/r3.jpeg">
 			  </div>
 			  <div class="back">
-				<img src="./assets/images/achievements/s16.jpeg">
+				<img src="./assets/images/achievements/r4.jpeg">
+			  </div>
+			</div>
+	
+			<div class="page">
+			  <div class="front">
+				<img src="./assets/images/achievements/r5.jpeg">
+			  </div>
+			  <div class="back">
+				<img src="./assets/images/achievements/r6.jpeg">
+			  </div>
+			</div>
+	
+			<div class="page">
+			  <div class="front">
+				<img src="./assets/images/achievements/r7.jpeg">
+			  </div>
+			  <div class="back">
+				<img src="./assets/images/achievements/r8.jpeg">
+			  </div>
+			</div>
+	
+			<div class="page">
+			  <div class="front">
+				<img src="./assets/images/achievements/r9.jpeg">
+			  </div>
+			  <div class="back">
+				<img src="./assets/images/achievements/r10.jpeg">
 			  </div>
 			</div>
 	
 			<div class="page">
 				<div class="front">
-					<img src="./assets/images/achievements/s17.jpeg">
+					<img src="./assets/images/achievements/r11.jpeg">
 				</div>
 				<div class="back">
-					<img src="./assets/images/achievements/s18.jpeg">
+					<img src="./assets/images/achievements/r12.jpeg">
 				</div>
 			</div>
 	
