--- a/achievements.html
+++ b/achievements.html
@@ -143,7 +143,7 @@
 	<div style="padding-top: 4%;">
 		<div class="book">
 			<div class="page">
-			  <div class="front cover" style="border: 4px solid rgb(184, 14, 14);">
+			  <div class="front cover">
 				<h1></h1>
 				<!-- <p style="color: black; font-weight: bold; backdrop-filter: blur(10px); width: fit-content; border-radius: 25%; padding: 10px;">OUR<br>ACHIEVEMENTS</p> -->
 			  </div>
