--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
               <h4>9th Standard</h4>
               <p>some short intro on syllabus or something is to be written here</p>
               <div class="text-button-pay">
-                <a href="#">Enroll <i class="fa fa-angle-double-right"></i></a>
+                <a href="#section6">Enroll <i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
@@ -441,7 +441,7 @@
               <h4>10th Standard</h4>
               <p>some short intro on syllabus or something is to be written here</p>
               <div class="text-button-pay">
-                <a href="#">Enroll <i class="fa fa-angle-double-right"></i></a>
+                <a href="#section6">Enroll <i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
@@ -451,7 +451,7 @@
               <h4>11th Standard</h4>
               <p>some short intro on syllabus or something is to be written here</p>
               <div class="text-button-pay">
-                <a href="#">Enroll <i class="fa fa-angle-double-right"></i></a>
+                <a href="#section6">Enroll <i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
@@ -461,7 +461,7 @@
               <h4>12th Standard</h4>
               <p>some short intro on syllabus or something is to be written here</p>
               <div class="text-button-pay">
-                <a href="#">Enroll <i class="fa fa-angle-double-right"></i></a>
+                <a href="#section6">Enroll <i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
@@ -471,7 +471,7 @@
               <h4>MH-CET</h4>
               <p>some short intro on syllabus or something is to be written here</p>
               <div class="text-button-pay">
-                <a href="#">Enroll <i class="fa fa-angle-double-right"></i></a>
+                <a href="#section6">Enroll <i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
@@ -481,7 +481,7 @@
               <h4>JEE</h4>
               <p>some short intro on syllabus or something is to be written here</p>
               <div class="text-button-pay">
-                <a href="#">Enroll <i class="fa fa-angle-double-right"></i></a>
+                <a href="#section6">Enroll <i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
@@ -491,7 +491,7 @@
               <h4>NEET</h4>
               <p>some short intro on syllabus or something is to be written here</p>
               <div class="text-button-pay">
-                <a href="#">Enroll <i class="fa fa-angle-double-right"></i></a>
+                <a href="#section6">Enroll <i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
