--- a/achievements.html
+++ b/achievements.html
@@ -3,7 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>IA ACHIEVCEMENTS</title>
+    <title>Intelligensia Academy</title>
+
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" style="border-radius: 50% !important;">
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/css/templatemo-grad-school.css">
+    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/lightbox.css">
+
 	<style>
 		.background{
 			position: absolute; 
@@ -14,6 +23,12 @@
             background-position: center; 
             filter: blur(1px); 
             z-index: -1; 
+		}
+
+		@media only screen and (max-width: 600px) {
+			.bookdiv {
+				padding-top: 40% !important;
+			}
 		}
 
 		.book {
@@ -137,10 +152,52 @@
 	</style>
 </head>
 <body>
+
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: sticky; top: 0; z-index: 2; padding: 20px !important;">
+		<a class="navbar-brand" href="#"><h4 style="font-weight: bold;"><span style="color: #e33c12;">INTELLIGENTSIA</span> <span style="color: white;">ACADEMY</span></h4></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+	  
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		  <ul class="navbar-nav mr-auto">
+			<li class="nav-item">
+			  <a class="nav-link" href="https://incredible-speculoos-69a8c5.netlify.app/#section2">About Us</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="https://incredible-speculoos-69a8c5.netlify.app/#section4">Courses</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">Achievements</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="https://incredible-speculoos-69a8c5.netlify.app/#section6">Contact</a>
+			</li>
+			<!-- <li class="nav-item dropdown">
+			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Dropdown
+			  </a>
+			  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+				<a class="dropdown-item" href="#">Action</a>
+				<a class="dropdown-item" href="#">Another action</a>
+				<div class="dropdown-divider"></div>
+				<a class="dropdown-item" href="#">Something else here</a>
+			  </div>
+			</li> -->
+		  </ul>
+			<div class="shake">
+			  <a href = "#section6"><button class="btn my-sm-0" type="submit" style="background-color: #e33c12; font-weight: bold; color: #172238;">
+				  Enquiry <i class="fa fa-phone" style="color: 172238;"></i>
+				</button>
+			  </a>
+			</div>
+		</div>
+	  </nav>
+
 	<div class="background">
 	</div>
 
-	<div style="padding-top: 4%;">
+	<div class="bookdiv" style="padding-top: 5%;">
 		<div class="book">
 			<div class="page">
 			  <div class="front cover">
@@ -270,6 +327,22 @@
 			</div>
 		</div>
 	</div>
+
 	<script src="assets/js/book.js"></script>
+	<script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/lightbox.js"></script>
+    <script src="assets/js/tabs.js"></script>
+    <script src="assets/js/video.js"></script>
+    <script src="assets/js/slick-slider.js"></script>
+    <script src="assets/js/custom.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
 </html>
