--- a/achievements.html
+++ b/achievements.html
@@ -197,7 +197,7 @@
 	<div class="background">
 	</div>
 
-	<div class="bookdiv" style="padding-top: 3%;">
+	<div class="bookdiv">
 		<div class="book">
 			<div class="page">
 			  <div class="front cover">
