--- a/achievements.html
+++ b/achievements.html
@@ -154,7 +154,7 @@
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: sticky; top: 0; z-index: 2; padding: 20px !important;">
-		<a class="navbar-brand" href="#"><h4 style="font-weight: bold;"><span style="color: #e33c12;">INTELLIGENTSIA</span> <span style="color: white;">ACADEMY</span></h4></a>
+		<a class="navbar-brand" href="https://incredible-speculoos-69a8c5.netlify.app"><h4 style="font-weight: bold;"><span style="color: #e33c12;">INTELLIGENTSIA</span> <span style="color: white;">ACADEMY</span></h4></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
